[package]
name = "zxcvbn-cli"
version = "2.0.2"
authors = ["Artem Varaksa <artvaraksa@gmail.com>"]
description = "A simple CLI tool to check password strength using zxcvbn."
exclude = ["img/*"]
homepage = "https://github.com/u32i64/zxcvbn-cli#readme"
repository = "https://github.com/u32i64/zxcvbn-cli"
readme = "README.md"
keywords = ["zxcvbn", "password", "strength", "check"]
categories = ["command-line-utilities"]
license = "MIT"
edition = "2018"

[[bin]]
path = "src/bin/main.rs"
name = "zxcvbn"

[dependencies]
zxcvbn = "2.1.0"
clap = { version = "3.1.18", features = ["cargo"] }
colored = "2.0.0"
rpassword = "6.0.1"
crossterm = "0.23.2"
