[package]
name = "zxcvbn-cli"
version = "2.0.3"
authors = ["Artem Varaksa <artvaraksa@gmail.com>"]
description = "A simple CLI tool to check password strength using zxcvbn."
exclude = ["img/*"]
homepage = "https://github.com/u32i64/zxcvbn-cli#readme"
repository = "https://github.com/u32i64/zxcvbn-cli"
readme = "README.md"
keywords = ["zxcvbn", "password", "strength", "check"]
categories = ["command-line-utilities"]
license = "MIT"
edition = "2021"

[[bin]]
path = "src/bin/main.rs"
name = "zxcvbn"

[dependencies]
zxcvbn = "^2.1"
clap = { version = "^4.1", features = ["cargo"] }
colored = "^2.0"
rpassword = "^7.2"
crossterm = "^0.25"
